<resources>
    <string name="app_name">Nochmal</string>
    <string name="hint">hint</string>
    <string name="nochmal_spielfeld">Nochmal Spielfeld</string>
    <string name="default_board">gggyyyygbbboyyy\nogygyyoorbboogg\nbgrggggrrryyogg\nbrrgoobbggyyorb\nroooorbbooorrrr\nrbbrrrryyorbbbo\nyybbbbryyygggoo</string>
    <string name="start">Spiel starten</string>
    <string name="submit">Submit</string>
    <string name="nochmal">Nochmal!</string>
    <string name="points">Punkt: 0</string>
    <string name="activate">Activate Dice</string>
    <string name="exit_dialog">Zurück zum Startbildschirm?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="round">Runde: 1</string>
    <string name="throwDice">Wüfeln</string>
    <string name="host">Spiel hosten</string>
    <string name="player_name">Spieler Name</string>
    <string name="lukas">Lukas</string>
    <string name="server_addresse">Server-Addresse</string>
    <string name="join">Spiel beitreten</string>
    <string name="scan_code">Scan Code</string>
    <string name="qr_code">QR-CODE</string>
</resources>